turtleart.disktwo.DiskTwo.scala.error
Compilation error:
DiskTwo:8: error: expected class or object definition
def quart(c:Color) {
^DiskTwo:14: error: expected class or object definition
def ligne(c:Color) {
^DiskTwo:18: error: Unmatched closing brace '}' ignored here
}
^